--- a/gen/isxdigit.3
+++ b/gen/isxdigit.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: isxdigit.3,v 1.2 1996/08/19 08:24:56 tholo Exp $
+.\"	$OpenBSD: isxdigit.3,v 1.3 1999/05/16 19:54:58 alex Exp $
 .\"
 .\" Copyright (c) 1991 The Regents of the University of California.
 .\" All rights reserved.
@@ -52,8 +52,8 @@ function tests for any hexadecimal-digit character.
 .Sh RETURN VALUES
 The
 .Fn isxdigit
-macro returns zero if the character tests false and
-returns non-zero if the character tests true.
+macro returns zero if the character tests false or
+non-zero if the character tests true.
 .Sh SEE ALSO
 .Xr isalnum 3 ,
 .Xr isalpha 3 ,
@@ -69,7 +69,7 @@ returns non-zero if the character tests true.
 .Xr isupper 3 ,
 .Xr stdio 3 ,
 .Xr toascii 3 ,
-.Xr tolower 3 ,
+.Xr tolower 3 , 
 .Xr toupper 3 ,
 .Xr ascii 7
 .Sh STANDARDS
