--- a/gen/getcap.3
+++ b/gen/getcap.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: getcap.3,v 1.9 1999/05/27 14:12:54 aaron Exp $
+.\"	$OpenBSD: getcap.3,v 1.10 1999/05/29 16:08:55 aaron Exp $
 .\"
 .\" Copyright (c) 1992, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -196,8 +196,7 @@ retrieves the value of the string capability
 .Fa cap
 from the capability record pointed to by
 .Fa buf .
-A pointer to a decoded,
-.Dv NULL Ns -terminated ,
+A pointer to a decoded, NUL-terminated,
 .Xr malloc Ns \&'d
 copy of the string is returned in the
 .Ft char *
