--- a/gen/getgrouplist.3
+++ b/gen/getgrouplist.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: getgrouplist.3,v 1.4 1998/06/15 17:54:54 mickey Exp $
+.\"	$OpenBSD: getgrouplist.3,v 1.5 1999/05/29 19:11:11 aaron Exp $
 .\"
 .\" Copyright (c) 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -65,7 +65,7 @@ the actual number of groups found is returned in
 The
 .Fn getgrouplist
 function
-returns -1 if the size of the group list is too small to
+returns \-1 if the size of the group list is too small to
 hold all the user's groups.
 Here, the group array will be filled with as many groups as will fit.
 .Sh FILES
