--- a/gen/pause.3
+++ b/gen/pause.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pause.3,v 1.4 1999/05/23 14:11:00 aaron Exp $
+.\"	$OpenBSD: pause.3,v 1.5 1999/05/29 20:07:13 aaron Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -64,7 +64,7 @@ the
 .Fn pause
 call will return.
 .Sh RETURN VALUES
-Always returns -1.
+Always returns \-1.
 .Sh ERRORS
 The
 .Fn pause
