--- a/gen/popen.3
+++ b/gen/popen.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: popen.3,v 1.4 1999/05/29 20:07:14 aaron Exp $
+.\"	$OpenBSD: popen.3,v 1.5 1999/05/29 22:38:35 aaron Exp $
 .\"
 .\" Copyright (c) 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -122,7 +122,7 @@ or if it cannot allocate memory.
 The
 .Fn pclose
 function
-returns -1 if
+returns \-1 if
 .Fa stream
 is not associated with a
 .Dq popened
