--- a/gen/sigsetops.3
+++ b/gen/sigsetops.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sigsetops.3,v 1.2 1996/08/19 08:26:14 tholo Exp $
+.\"	$OpenBSD: sigsetops.3,v 1.3 1999/05/29 21:24:20 aaron Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -98,7 +98,7 @@ function returns 1
 if the signal is a member of the set,
 a 0 otherwise.
 The other functions return 0 upon success.
-A -1 return value
+A \-1 return value
 indicates an error occurred and the global variable
 .Va errno
 is set to indicate the reason.
