--- a/gen/uname.3
+++ b/gen/uname.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: uname.3,v 1.4 1998/06/15 17:55:01 mickey Exp $
+.\"	$OpenBSD: uname.3,v 1.5 1999/05/29 22:38:36 aaron Exp $
 .\"
 .\" Copyright (c) 1994
 .\"	The Regents of the University of California.  All rights reserved.
@@ -69,7 +69,7 @@ Machine hardware platform.
 .Sh RETURN VALUES
 If
 .Fn uname
-is successful, 0 is returned; otherwise, -1 is returned and
+is successful, 0 is returned; otherwise, \-1 is returned and
 .Va errno
 is set appropriately.
 .Sh ERRORS
