--- a/gen/getfsent.3
+++ b/gen/getfsent.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: getfsent.3,v 1.3 1999/05/23 14:10:59 aaron Exp $
+.\"	$OpenBSD: getfsent.3,v 1.4 1999/05/29 19:11:11 aaron Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -107,10 +107,7 @@ The
 .Fn getfsspec ,
 and
 .Fn getfsfile
-functions
-return a
-.Dv NULL
-pointer on
+functions return a null pointer on
 .Dv EOF
 or error.
 The
