--- a/gen/getttyent.3
+++ b/gen/getttyent.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: getttyent.3,v 1.5 1999/05/25 01:50:57 aaron Exp $
+.\"	$OpenBSD: getttyent.3,v 1.6 1999/05/29 19:11:11 aaron Exp $
 .\"
 .\" Copyright (c) 1989, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -123,9 +123,7 @@ or whitespace removed.
 .El
 .Pp
 If any of the fields pointing to character strings are unspecified,
-they are returned as
-.Dv NULL
-pointers.
+they are returned as null pointers.
 The field
 .Fa ty_status
 will be zero if no flag values are specified.
@@ -156,9 +154,7 @@ The routines
 .Fn getttyent
 and
 .Fn getttynam
-return a
-.Dv NULL
-pointer on
+return a null pointer on
 .Dv EOF
 or error.
 The
