--- a/gen/popen.3
+++ b/gen/popen.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: popen.3,v 1.5 1999/05/29 22:38:35 aaron Exp $
+.\"	$OpenBSD: popen.3,v 1.6 1999/06/03 10:03:22 aaron Exp $
 .\"
 .\" Copyright (c) 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -60,7 +60,7 @@ the resulting stream is correspondingly read-only or write-only.
 .Pp
 The
 .Fa command
-argument is a pointer to a NUL-terminated
+argument is a pointer to a null-terminated
 string containing a shell command line.
 This command is passed to
 .Pa /bin/sh
@@ -69,7 +69,7 @@ using the
 flag; interpretation, if any, is performed by the shell.
 The
 .Fa mode
-argument is a pointer to a NUL-terminated
+argument is a pointer to a null-terminated
 string which must be either
 .Qq r
 for reading
