--- a/gen/time.3
+++ b/gen/time.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: time.3,v 1.4 1999/05/27 20:49:35 aaron Exp $
+.\"	$OpenBSD: time.3,v 1.5 1999/05/29 22:38:35 aaron Exp $
 .\"
 .\" Copyright (c) 1989, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -57,9 +57,7 @@ pointer
 .Fa tloc .
 If
 .Fa tloc
-is a
-.Dv NULL
-pointer, no value is stored.
+is a null pointer, no value is stored.
 .Pp
 Upon successful completion,
 .Fn time
