--- a/gen/uname.3
+++ b/gen/uname.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: uname.3,v 1.5 1999/05/29 22:38:36 aaron Exp $
+.\"	$OpenBSD: uname.3,v 1.6 1999/06/03 10:03:24 aaron Exp $
 .\"
 .\" Copyright (c) 1994
 .\"	The Regents of the University of California.  All rights reserved.
@@ -44,7 +44,7 @@
 .Sh DESCRIPTION
 The
 .Fn uname
-function stores NUL-terminated strings of information identifying
+function stores null-terminated strings of information identifying
 the current system into the structure referenced by
 .Fa name .
 .Pp
