--- a/gen/isalpha.3
+++ b/gen/isalpha.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: isalpha.3,v 1.3 1999/05/16 19:54:54 alex Exp $
+.\"	$OpenBSD: isalpha.3,v 1.4 1999/05/29 20:07:13 aaron Exp $
 .\"
 .\" Copyright (c) 1991 The Regents of the University of California.
 .\" All rights reserved.
@@ -61,9 +61,7 @@ for which none of
 or
 .Xr isspace 3
 is true.
-In the 
-.Em ``C''
-locale,
+In the C locale,
 .Fn isalpha
 returns true only for the characters for which
 .Xr isupper 3
