--- a/gen/isblank.3
+++ b/gen/isblank.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: isblank.3,v 1.3 1999/05/16 19:54:54 alex Exp $
+.\"	$OpenBSD: isblank.3,v 1.4 1999/05/29 20:07:13 aaron Exp $
 .\"
 .\" Copyright (c) 1991 The Regents of the University of California.
 .\" All rights reserved.
@@ -58,9 +58,7 @@ Space character.
 Horizontal tab.
 .El
 .Pp
-In the 
-.Em ``C''
-locale,
+In the C locale,
 .Fn isblank
 returns true only for the standard blank-space characters.
 .Sh RETURN VALUES
