--- a/gen/islower.3
+++ b/gen/islower.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: islower.3,v 1.3 1999/05/16 19:54:56 alex Exp $
+.\"	$OpenBSD: islower.3,v 1.4 1999/05/29 20:07:13 aaron Exp $
 .\"
 .\" Copyright (c) 1991 The Regents of the University of California.
 .\" All rights reserved.
@@ -58,9 +58,7 @@ for which none of
 or
 .Xr isspace 3
 is true.
-In the 
-.Em ``C''
-locale,
+In the C locale,
 .Fn islower
 returns true only for the characters defined as lower-case letters.
 .Sh RETURN VALUES
