--- a/gen/isupper.3
+++ b/gen/isupper.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: isupper.3,v 1.3 1999/05/16 19:54:58 alex Exp $
+.\"	$OpenBSD: isupper.3,v 1.4 1999/05/29 20:07:13 aaron Exp $
 .\"
 .\" Copyright (c) 1991 The Regents of the University of California.
 .\" All rights reserved.
@@ -56,9 +56,7 @@ implementation-defined set of characters for which none of
 or
 .Xr isspace 3
 is true.
-In the 
-.Em ``C''
-locale,
+In the C locale,
 .Fn isupper
 returns true only for the characters defined as upper-case letters.
 .Sh RETURN VALUES
