--- a/sys/_exit.2
+++ b/sys/_exit.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: _exit.2,v 1.4 1999/05/12 13:26:48 aaron Exp $
+.\"	$OpenBSD: _exit.2,v 1.5 1999/05/23 14:10:57 aaron Exp $
 .\"	$NetBSD: _exit.2,v 1.6 1995/02/27 12:31:34 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1993
@@ -97,8 +97,7 @@ and all current access to the controlling terminal is revoked.
 Most C programs call the library routine
 .Xr exit 3 ,
 which flushes buffers, closes streams, unlinks temporary files, etc.,
-before
-calling
+and then calls
 .Fn _exit .
 .Sh RETURN VALUE
 .Fn _exit
