--- a/gen/getcap.3
+++ b/gen/getcap.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: getcap.3,v 1.13 1999/06/04 01:30:10 aaron Exp $
+.\"	$OpenBSD: getcap.3,v 1.14 1999/06/05 03:44:53 aaron Exp $
 .\"
 .\" Copyright (c) 1992, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -34,7 +34,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd April, 19, 1994
+.Dd April 19, 1994
 .Dt GETCAP 3 
 .Os
 .Sh NAME
