--- a/gen/setproctitle.3
+++ b/gen/setproctitle.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: setproctitle.3,v 1.5 1997/05/30 07:48:25 deraadt Exp $
+.\"	$OpenBSD: setproctitle.3,v 1.6 1999/05/29 21:24:19 aaron Exp $
 .\"
 .\" Copyright (c) 1994, 1995 Christopher G. Demetriou
 .\" All rights reserved.
@@ -29,7 +29,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd April, 13, 1994
+.Dd April 13, 1994
 .Dt SETPROCTITLE 3
 .Os
 .Sh NAME
