--- a/sys/setsid.2
+++ b/sys/setsid.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: setsid.2,v 1.8 1999/05/16 19:55:37 alex Exp $
+.\"	$OpenBSD: setsid.2,v 1.9 1999/06/29 14:10:19 aaron Exp $
 .\"	$NetBSD: setsid.2,v 1.3 1995/10/12 15:41:13 jtc Exp $
 .\"
 .\" Copyright (c) 1991, 1993
@@ -34,7 +34,7 @@
 .\"
 .\"	@(#)setsid.2	8.1 (Berkeley) 6/4/93
 .\"
-.Dd June, 4, 1993
+.Dd June 4, 1993
 .Dt SETSID 2
 .Os
 .Sh NAME
