--- a/termios/tcgetpgrp.3
+++ b/termios/tcgetpgrp.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: tcgetpgrp.3,v 1.3 1997/05/30 07:48:34 deraadt Exp $
+.\"	$OpenBSD: tcgetpgrp.3,v 1.4 1997/07/22 20:26:42 deraadt Exp $
 .\"
 .\" Copyright (c) 1991 The Regents of the University of California.
 .\" All rights reserved.
@@ -31,7 +31,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd March, 29, 1992
+.Dd March 29, 1992
 .Dt TCGETPGRP 3
 .Os
 .Sh NAME
