--- a/termios/tcsetpgrp.3
+++ b/termios/tcsetpgrp.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: tcsetpgrp.3,v 1.4 1997/07/22 20:26:43 deraadt Exp $
+.\"	$OpenBSD: tcsetpgrp.3,v 1.5 1998/08/29 21:12:05 deraadt Exp $
 .\"
 .\" Copyright (c) 1991 The Regents of the University of California.
 .\" All rights reserved.
@@ -31,7 +31,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd March, 29, 1992
+.Dd March 29, 1992
 .Dt TCSETPGRP 3
 .Os
 .Sh NAME
