--- a/sys/getpgrp.2
+++ b/sys/getpgrp.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: getpgrp.2,v 1.4 1998/06/15 17:55:21 mickey Exp $
+.\"	$OpenBSD: getpgrp.2,v 1.5 1999/05/23 14:10:52 aaron Exp $
 .\"	$NetBSD: getpgrp.2,v 1.8 1995/02/27 12:33:09 cgd Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
@@ -100,7 +100,7 @@ This incompatibility is required by
 From the
 .St -p1003.1-88
 Rationale:
-.sp
+.Pp
 .Bx 4.3
 provides a
 .Fn getpgrp
