--- a/sys/stat.2
+++ b/sys/stat.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: stat.2,v 1.8 1999/05/25 21:16:26 aaron Exp $
+.\"	$OpenBSD: stat.2,v 1.9 1999/06/29 14:10:24 aaron Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993, 1994
 .\"	The Regents of the University of California.  All rights reserved.
@@ -114,7 +114,7 @@ struct stat {
 .Ed
 .Pp
 The time-related fields of
-.Fa struct stat
+.Li struct stat
 are as follows:
 .Bl -tag -width XXXst_mtime
 .It st_atime
@@ -149,7 +149,7 @@ system calls.
 .El
 .Pp
 The size-related fields of the
-.Fa struct stat
+.Li struct stat
 are as follows:
 .Bl -tag -width XXXst_blksize
 .It st_blksize
