--- a/db/man/ndbm.3
+++ b/db/man/ndbm.3
@@ -1,8 +1,8 @@
 .\" David Leonard, 1998. Placed in the public domain.
-.\" $OpenBSD: ndbm.3,v 1.6 1999/05/16 19:54:47 alex Exp $
+.\" $OpenBSD: ndbm.3,v 1.7 1999/05/23 14:10:58 aaron Exp $
 .Dd May 13, 1998
-.Os
 .Dt NDBM 3
+.Os
 .Sh NAME
 .Nm ndbm
 .Nd database access methods
