--- a/time/zdump.8
+++ b/time/zdump.8
@@ -1,7 +1,7 @@
-.\"	$OpenBSD: zdump.8,v 1.3 1997/01/14 03:16:54 millert Exp $
+.\"	$OpenBSD: zdump.8,v 1.4 1999/05/25 00:49:42 aaron Exp $
 .Dd May 23, 1999
-.Os
 .Dt ZDUMP 8
+.Os
 .Sh NAME
 .Nm zdump
 .Nd time zone dumper
