--- a/time/zic.8
+++ b/time/zic.8
@@ -1,7 +1,7 @@
-.\"	$OpenBSD: zic.8,v 1.6 1999/01/29 07:04:05 d Exp $
+.\"	$OpenBSD: zic.8,v 1.7 1999/05/25 00:49:43 aaron Exp $
 .Dd May 23, 1999
-.Os
 .Dt ZIC 8
+.Os
 .Sh NAME
 .Nm zic
 .Nd time zone compiler
