--- a/time/ctime.3
+++ b/time/ctime.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ctime.3,v 1.13 1999/05/16 19:55:44 alex Exp $
+.\"	$OpenBSD: ctime.3,v 1.14 1999/07/02 17:04:16 aaron Exp $
 .\"
 .\"
 .Dd February 16, 1999
@@ -127,7 +127,7 @@ are determined.
 .Fn mktime
 returns the specified calendar time;
 If the calendar time cannot be represented,
-it returns -1.
+it returns \-1.
 .Pp
 .Fn difftime
 returns the difference between two calendar times,
