--- a/sys/revoke.2
+++ b/sys/revoke.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: revoke.2,v 1.4 1999/02/27 21:56:43 deraadt Exp $
+.\"	$OpenBSD: revoke.2,v 1.5 1999/07/07 17:02:42 art Exp $
 .\"	$NetBSD: revoke.2,v 1.3 1995/10/12 15:41:11 jtc Exp $
 .\"
 .\" Copyright (c) 1993
@@ -92,9 +92,6 @@ Too many symbolic links were encountered in translating the pathname.
 .It Bq Er EFAULT
 .Fa path
 points outside the process's allocated address space.
-.It Bq Er EINVAL
-The named file is neither a character special or block
-special file.
 .It Bq Er EPERM
 The caller is neither the owner of the file nor the super user.
 .El
