--- a/db/man/mpool.3
+++ b/db/man/mpool.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mpool.3,v 1.8 1999/07/07 10:50:04 aaron Exp $
+.\"	$OpenBSD: mpool.3,v 1.9 1999/07/07 14:22:24 aaron Exp $
 .\"
 .\" Copyright (c) 1990, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -110,7 +110,7 @@ If the
 .Fa pgout
 function is specified, it is called each time a buffer is written into the
 backing file.
-Both functions are are called with the
+Both functions are called with the
 .Fa pgcookie
 pointer, the page number and a pointer to the page to being read or written.
 .Pp
