--- a/gen/time.3
+++ b/gen/time.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: time.3,v 1.5 1999/05/29 22:38:35 aaron Exp $
+.\"	$OpenBSD: time.3,v 1.6 1999/06/04 01:30:11 aaron Exp $
 .\"
 .\" Copyright (c) 1989, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -63,9 +63,7 @@ Upon successful completion,
 .Fn time
 returns the value of time.
 Otherwise a value of
-.Po
-.Fa time_t No - 1
-.Pc
+.Po Fa time_t Pc Ns -1
 is returned and the global variable
 .Va errno
 is set to indicate the error.
