--- a/sys/write.2
+++ b/sys/write.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: write.2,v 1.11 1999/05/23 14:10:57 aaron Exp $
+.\"	$OpenBSD: write.2,v 1.12 1999/06/29 14:10:32 aaron Exp $
 .\"	$NetBSD: write.2,v 1.6 1995/02/27 12:39:43 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
@@ -133,7 +133,7 @@ exceedes the constant
 .Dv IOV_MAX .
 .Sh RETURN VALUES
 Upon successful completion the number of bytes which were written
-is returned.  Otherwise a \-1 is returned and the global variable
+is returned.  Otherwise, a \-1 is returned and the global variable
 .Va errno
 is set to indicate the error.
 .Sh ERRORS
