--- a/sys/read.2
+++ b/sys/read.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: read.2,v 1.10 1999/06/29 14:10:15 aaron Exp $
+.\"	$OpenBSD: read.2,v 1.11 1999/07/02 20:58:01 aaron Exp $
 .\"	$NetBSD: read.2,v 1.6 1995/02/27 12:35:47 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
@@ -151,7 +151,7 @@ and no data were ready to be read.
 .Pp
 In addition,
 .Fn read
-may return following error:
+may return the following error:
 .Bl -tag -width Er
 .It Bq Er EINVAL
 .Fa nbytes
