--- a/gen/siginterrupt.3
+++ b/gen/siginterrupt.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: siginterrupt.3,v 1.7 1999/06/03 10:03:23 aaron Exp $
+.\"	$OpenBSD: siginterrupt.3,v 1.8 1999/07/09 13:35:18 aaron Exp $
 .\"
 .\" Copyright (c) 1985, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -104,7 +104,7 @@ specified.
 .Xr sigaction 2 ,
 .Xr sigblock 3 ,
 .Xr sigpause 3 ,
-.Xr sigsetmask 3 .
+.Xr sigsetmask 3
 .Sh HISTORY
 The
 .Fn siginterrupt
