--- a/time/ctime.3
+++ b/time/ctime.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ctime.3,v 1.14 1999/07/02 17:04:16 aaron Exp $
+.\"	$OpenBSD: ctime.3,v 1.15 1999/07/07 14:22:25 aaron Exp $
 .\"
 .\"
 .Dd February 16, 1999
@@ -42,7 +42,7 @@ and returns a pointer to a
 26-character string
 of the form
 .Bd -literal -offset indent
-Thu Nov 24 18:22:48 1986\n\0
+Thu Nov 24 18:22:48 1986\en\0
 .Ed
 .Pp
 All the fields have constant width.
