--- a/time/time2posix.3
+++ b/time/time2posix.3
@@ -1,9 +1,10 @@
-.\"	$OpenBSD: time2posix.3,v 1.8 1999/05/25 00:49:41 aaron Exp $
+.\"	$OpenBSD: time2posix.3,v 1.9 1999/07/09 13:35:21 aaron Exp $
 .Dd May 24, 1999
 .Dt TIME2POSIX 3
 .Os
 .Sh NAME
-.Nm time2posix , posix2time
+.Nm time2posix ,
+.Nm posix2time
 .Nd convert seconds since the Epoch
 .Sh SYNOPSIS
 .Fd #include <sys/types.h>
