--- a/sys/mknod.2
+++ b/sys/mknod.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mknod.2,v 1.7 1999/06/29 14:10:07 aaron Exp $
+.\"	$OpenBSD: mknod.2,v 1.8 2000/04/15 11:46:03 aaron Exp $
 .\"	$NetBSD: mknod.2,v 1.6 1995/02/27 12:34:33 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
@@ -118,9 +118,14 @@ The named file exists.
 .It Bq Er EFAULT
 .Fa path
 points outside the process's allocated address space.
+.It Bq Er EINVAL
+The process is running within an alternate root directory, as
+created by 
+.Xr chroot 2 .
 .El
 .Sh SEE ALSO
 .Xr chmod 2 ,
+.Xr chroot 2 ,
 .Xr stat 2 ,
 .Xr umask 2
 .Sh HISTORY
