--- a/sys/getfh.2
+++ b/sys/getfh.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: getfh.2,v 1.5 1999/02/27 21:56:17 deraadt Exp $
+.\"	$OpenBSD: getfh.2,v 1.6 1999/06/29 14:09:56 aaron Exp $
 .\"	$NetBSD: getfh.2,v 1.7 1995/10/12 15:40:53 jtc Exp $
 .\"
 .\" Copyright (c) 1989, 1991, 1993
@@ -95,6 +95,5 @@ error occurred while reading from or writing to the file system.
 .Sh HISTORY
 The
 .Fn getfh
-function
-first appeared in
+function first appeared in
 .Bx 4.4 .
