--- a/sys/getpid.2
+++ b/sys/getpid.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: getpid.2,v 1.5 1999/05/23 14:10:52 aaron Exp $
+.\"	$OpenBSD: getpid.2,v 1.6 1999/06/29 14:10:00 aaron Exp $
 .\"	$NetBSD: getpid.2,v 1.5 1995/02/27 12:33:12 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
@@ -50,15 +50,12 @@
 .Fn getppid void
 .Sh DESCRIPTION
 .Fn getpid
-returns
-the process ID of
-the calling process.
-The ID is guaranteed to be unique and is
-useful for constructing temporary file names.
+returns the process ID of the calling process.
+The ID is guaranteed to be unique and is useful for constructing
+temporary file names.
 .Pp
 .Fn getppid
-returns the process ID of the parent
-of the calling process.
+returns the process ID of the parent of the calling process.
 .Sh ERRORS
 The
 .Fn getpid
