--- a/sys/send.2
+++ b/sys/send.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: send.2,v 1.17 1999/08/15 13:14:12 deraadt Exp $
+.\"	$OpenBSD: send.2,v 1.18 2000/03/14 21:31:40 aaron Exp $
 .\"	$NetBSD: send.2,v 1.6 1996/01/15 01:17:18 thorpej Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
@@ -167,11 +167,11 @@ The destination address specified a host that is down.
 .It Bq Er ENETDOWN
 The destination address specified a network that is down.
 .It Bq Er ECONNREFUSED
-The destination host rejected the message (or a previous one). This error
-can only be returned by connected sockets.
+The destination host rejected the message (or a previous one).
+This error can only be returned by connected sockets.
 .It Bq Er ENOPROTOOPT
-There was a problem sending the message. This error can only be returned by
-connected sockets.
+There was a problem sending the message.
+This error can only be returned by connected sockets.
 .It Bq Er EDESTADDRREQ
 The socket is not connected, and no destination address was specified.
 .It Bq Er EISCONN
