--- a/sys/unlink.2
+++ b/sys/unlink.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: unlink.2,v 1.9 2000/04/15 11:46:04 aaron Exp $
+.\"	$OpenBSD: unlink.2,v 1.10 2000/07/07 18:21:37 aaron Exp $
 .\"	$NetBSD: unlink.2,v 1.7 1995/02/27 12:39:13 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
@@ -47,8 +47,7 @@
 .Sh DESCRIPTION
 The
 .Fn unlink
-function
-removes the link named by
+function removes the link named by
 .Fa path
 from its directory and decrements the link count of the
 file which was referenced by the link.
