--- a/gen/authenticate.3
+++ b/gen/authenticate.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD$
+.\"	$OpenBSD: authenticate.3,v 1.1 2000/11/21 00:51:16 millert Exp $
 .\"
 .\" Copyright (c) 1997 Berkeley Software Design, Inc. All rights reserved.
 .\"
@@ -165,7 +165,7 @@ return value as
 The
 .Fn auth_approval
 function calls the approval script for the user of the specified
-.Fn type .
+.Ar type .
 The string
 .Dq approve-
 will be prepended to
