--- a/gen/alarm.3
+++ b/gen/alarm.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: alarm.3,v 1.6 1999/05/23 14:11:01 aaron Exp $
+.\"	$OpenBSD: alarm.3,v 1.7 1999/07/09 13:35:20 aaron Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993, 1994
 .\"	The Regents of the University of California.  All rights reserved.
@@ -49,8 +49,7 @@ This interface is made obsolete by
 .Pp
 The
 .Fn alarm
-function
-waits a count of
+function waits a count of
 .Ar seconds
 before asserting the terminating signal
 .Dv SIGALRM .
