--- a/gen/setjmp.3
+++ b/gen/setjmp.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: setjmp.3,v 1.9 1999/07/09 13:35:18 aaron Exp $
+.\"	$OpenBSD: setjmp.3,v 1.10 2000/04/18 03:01:27 aaron Exp $
 .\"
 .\" Copyright (c) 1990, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -128,8 +128,7 @@ function pairs save and restore only the register set and the stack (see
 .Pp
 The
 .Fn sigsetjmp Ns / Ns Fn siglongjmp
-function
-pairs save and restore the signal mask if the argument
+function pairs save and restore the signal mask if the argument
 .Fa savemask
 is non-zero.
 Otherwise, only the register set and the stack are saved.
