--- a/gen/siginterrupt.3
+++ b/gen/siginterrupt.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: siginterrupt.3,v 1.8 1999/07/09 13:35:18 aaron Exp $
+.\"	$OpenBSD: siginterrupt.3,v 1.9 1999/09/27 02:00:13 aaron Exp $
 .\"
 .\" Copyright (c) 1985, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -44,8 +44,7 @@
 .Sh DESCRIPTION
 The
 .Fn siginterrupt
-function
-is used to change the system call restart
+function is used to change the system call restart
 behavior when a system call is interrupted by the specified signal.
 If
 .Fa flag
