--- a/gen/valloc.3
+++ b/gen/valloc.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: valloc.3,v 1.7 1999/06/04 01:30:12 aaron Exp $
+.\"	$OpenBSD: valloc.3,v 1.8 1999/07/09 13:35:20 aaron Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -73,5 +73,4 @@ function appeared in
 .Sh BUGS
 A
 .Fn vfree
-function
-has not been implemented.
+function has not been implemented.
