--- a/gen/vis.3
+++ b/gen/vis.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: vis.3,v 1.12 2000/09/14 17:47:09 aaron Exp $
+.\"	$OpenBSD: vis.3,v 1.13 2000/11/21 00:47:28 millert Exp $
 .\"
 .\" Copyright (c) 1989, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -53,8 +53,7 @@
 .Sh DESCRIPTION
 The
 .Fn vis
-function
-copies into
+function copies into
 .Fa dst
 a string which represents the character
 .Fa c .
