--- a/gen/directory.3
+++ b/gen/directory.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: directory.3,v 1.13 2000/04/18 03:01:25 aaron Exp $
+.\"	$OpenBSD: directory.3,v 1.14 2000/12/21 17:25:25 aaron Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -180,11 +180,11 @@ if (dirp) {
 	while ((dp = readdir(dirp)) != NULL)
 		if (dp->d_namlen == len && !strcmp(dp->d_name, name)) {
 			(void)closedir(dirp);
-			return FOUND;
+			return (FOUND);
 		}
 	(void)closedir(dirp);
 }
-return NOT_FOUND;
+return (NOT_FOUND);
 .Ed
 .Sh SEE ALSO
 .Xr close 2 ,
