--- a/sys/read.2
+++ b/sys/read.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: read.2,v 1.16 2000/04/20 06:34:37 deraadt Exp $
+.\"	$OpenBSD: read.2,v 1.17 2000/10/18 05:12:11 aaron Exp $
 .\"	$NetBSD: read.2,v 1.6 1995/02/27 12:35:47 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
@@ -226,7 +226,7 @@ functions conform to
 Error checks should explicitly test for \-1.
 Code such as
 .Bd -literal
-	while ((nr = read(fd, buf, sizeof buf)) > 0)
+	while ((nr = read(fd, buf, sizeof(buf))) > 0)
 .Ed
 .Pp
 is not maximally portable, as some platforms allow for
@@ -240,7 +240,7 @@ and
 may appear as a negative number distinct from \-1.
 Proper loops should use
 .Bd -literal
-	while ((nr = read(fd, buf, sizeof buf)) != -1 && nr != 0)
+	while ((nr = read(fd, buf, sizeof(buf))) != -1 && nr != 0)
 .Ed
 .Sh HISTORY
 The
