--- a/sys/write.2
+++ b/sys/write.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: write.2,v 1.20 2000/04/20 06:34:37 deraadt Exp $
+.\"	$OpenBSD: write.2,v 1.21 2000/10/18 05:12:12 aaron Exp $
 .\"	$NetBSD: write.2,v 1.6 1995/02/27 12:39:43 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
@@ -248,7 +248,7 @@ functions conform to
 Error checks should explicitly test for \-1.
 Code such as
 .Bd -literal
-	while ((nr = write(fd, buf, sizeof buf)) > 0)
+	while ((nr = write(fd, buf, sizeof(buf))) > 0)
 .Ed
 .Pp
 is not maximally portable, as some platforms allow for
@@ -262,7 +262,7 @@ and
 may appear as a negative number distinct from \-1.
 Proper loops should use
 .Bd -literal
-	while ((nr = write(fd, buf, sizeof buf)) != -1 && nr != 0)
+	while ((nr = write(fd, buf, sizeof(buf))) != -1 && nr != 0)
 .Ed
 .Sh HISTORY
 The
