--- a/gen/signal.3
+++ b/gen/signal.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: signal.3,v 1.13 2000/04/18 03:01:27 aaron Exp $
+.\"	$OpenBSD: signal.3,v 1.14 2001/01/17 19:20:02 deraadt Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -313,10 +313,11 @@ Extension Interfaces:
 .Fn strlcat .
 .Pp
 All functions not in the above lists are considered to be unsafe
-with respect to signals.  That is to say, the behaviour of such
-functions when called from a signal handler is undefined.
+with respect to signals.
+That is to say, the behaviour of such functions when called from a
+signal handler is undefined.
 In general though, signal handlers should do little more than set a
-flag; most other actions are not safe.  
+flag; most other actions are not safe.
 .Pp
 As well, inside the signal handler it is also considered more safe to
 make a copy the global variable
