--- a/sys/mount.2
+++ b/sys/mount.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mount.2,v 1.19 2000/09/22 02:18:15 espie Exp $
+.\"	$OpenBSD: mount.2,v 1.20 2001/04/05 04:01:55 aaron Exp $
 .\"	$NetBSD: mount.2,v 1.12 1996/02/29 23:47:48 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1989, 1993
@@ -101,7 +101,8 @@ All I/O to the filesystem should be done synchronously.
 All I/O to the filesystem should be done asynchronously.
 .It Dv MNT_SOFTDEP
 Use soft dependencies.
-Applies to FFS filesystems only.
+Applies to FFS filesystems only (see 'softdep' in
+.Xr mount 8 ) .
 .El
 .Pp
 The flag
