--- a/gen/frexp.3
+++ b/gen/frexp.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: frexp.3,v 1.4 1999/06/05 03:44:53 aaron Exp $
+.\"	$OpenBSD: frexp.3,v 1.5 1999/07/09 13:35:16 aaron Exp $
 .\"
 .\" Copyright (c) 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -63,9 +63,7 @@ such that
 .Li x
 is a
 .Li double
-with magnitude in the interval
-.Bq 1/2 , 1
-or zero, and
+with magnitude in the interval [1/2,\ 1) or zero, and
 .Fa value
 equals
 .Li x
