--- a/gen/sysctl.3
+++ b/gen/sysctl.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sysctl.3,v 1.67 2001/05/11 06:39:37 angelos Exp $
+.\"	$OpenBSD: sysctl.3,v 1.68 2001/05/14 07:13:32 angelos Exp $
 .\"
 .\" Copyright (c) 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -251,7 +251,7 @@ The software page size.
 A comma-separated list of disk names.
 .It Dv HW_DISKSTATS
 An array of
-.Li struct disk
+.Li struct diskstats
 structures containing disk statistics.
 .It Dv HW_DISKCOUNT
 The number of disks currently attached to the system.
