--- a/sys/adjtime.2
+++ b/sys/adjtime.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: adjtime.2,v 1.9 2000/04/15 11:46:02 aaron Exp $
+.\"	$OpenBSD: adjtime.2,v 1.10 2000/10/18 05:12:08 aaron Exp $
 .\"	$NetBSD: adjtime.2,v 1.5 1995/10/12 15:40:44 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
@@ -97,9 +97,8 @@ The process's effective user ID is not that of the superuser.
 .Xr timed 8 ,
 .Xr timedc 8
 .Rs
+.%A R. Gusella and S. Zatti
 .%T "TSP: The Time Synchronization Protocol for UNIX 4.3BSD"
-.%A R. Gusella
-.%A S. Zatti
 .Re
 .Sh HISTORY
 The
