--- a/gen/isalnum.3
+++ b/gen/isalnum.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: isalnum.3,v 1.4 1999/05/29 20:07:13 aaron Exp $
+.\"	$OpenBSD: isalnum.3,v 1.5 1999/07/09 13:35:17 aaron Exp $
 .\"
 .\" Copyright (c) 1991 The Regents of the University of California.
 .\" All rights reserved.
@@ -81,3 +81,11 @@ The
 .Fn isalnum
 function conforms to
 .St -ansiC .
+.Sh CAVEATS
+The argument to
+.Fn isalnum
+must be
+.Dv EOF
+or representable as an
+.Li unsigned char ;
+otherwise, the result is undefined.
