--- a/gen/isspace.3
+++ b/gen/isspace.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: isspace.3,v 1.6 1999/07/09 13:35:18 aaron Exp $
+.\"	$OpenBSD: isspace.3,v 1.7 2000/03/04 22:19:31 aaron Exp $
 .\"
 .\" Copyright (c) 1991 The Regents of the University of California.
 .\" All rights reserved.
@@ -102,3 +102,11 @@ The
 .Fn isspace
 function conforms to
 .St -ansiC .
+.Sh CAVEATS
+The argument to
+.Fn isspace
+must be
+.Dv EOF
+or representable as an
+.Li unsigned char ;
+otherwise, the result is undefined.
