--- a/gen/isxdigit.3
+++ b/gen/isxdigit.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: isxdigit.3,v 1.4 1999/05/29 20:07:13 aaron Exp $
+.\"	$OpenBSD: isxdigit.3,v 1.5 1999/07/09 13:35:18 aaron Exp $
 .\"
 .\" Copyright (c) 1991 The Regents of the University of California.
 .\" All rights reserved.
@@ -77,3 +77,11 @@ The
 .Fn isxdigit
 function conforms to
 .St -ansiC .
+.Sh CAVEATS
+The argument to
+.Fn isxdigit
+must be
+.Dv EOF
+or representable as an
+.Li unsigned char ;
+otherwise, the result is undefined.
