--- a/sys/getpeername.2
+++ b/sys/getpeername.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: getpeername.2,v 1.14 2000/10/18 05:12:09 aaron Exp $
+.\"	$OpenBSD: getpeername.2,v 1.15 2001/06/25 00:13:22 pjanzen Exp $
 .\"	$NetBSD: getpeername.2,v 1.6 1995/10/12 15:40:56 jtc Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
@@ -132,6 +132,7 @@ process address space.
 .Xr accept 2 ,
 .Xr bind 2 ,
 .Xr getsockname 2 ,
+.Xr getpeereid 2 ,
 .Xr socket 2
 .Sh HISTORY
 The
